@@ -6,7 +6,7 @@ plugins {
     application
 }
 
-group = "org.sdpi.test"
+group = "org.sdpi"
 version = "1.0-SNAPSHOT"
 
 repositories {
@@ -15,24 +15,25 @@ repositories {
 
 dependencies {
 
+    // regex pattern
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.7.10")
+
+    // command line parsing
     // https://mvnrepository.com/artifact/com.github.ajalt/clikt
     implementation(group = "com.github.ajalt", name = "clikt", version = "2.8.0")
 
+    // asciidoc conversion
     // https://mvnrepository.com/artifact/org.asciidoctor/asciidoctorj
     implementation("org.asciidoctor:asciidoctorj:2.5.4")
     implementation("org.asciidoctor:asciidoctorj-pdf:2.1.4")
     implementation("org.asciidoctor:asciidoctorj-diagram:2.2.3")
     implementation("org.asciidoctor:asciidoctorj-diagram-plantuml:1.2022.5")
 
-    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.7.10")
-
+    // logging
     // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
     implementation("org.apache.logging.log4j:log4j-core:2.17.2")
-
     // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api-kotlin
     implementation("org.apache.logging.log4j:log4j-api-kotlin:1.0.0")
-
-
 
     testImplementation(kotlin("test"))
 }
@@ -41,14 +42,10 @@ tasks.test {
     useJUnitPlatform()
 }
 
-//tasks.named<JavaCompile>("compileJava") {
-//    options.compilerArgs = listOf("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED")
-//}
-
 tasks.withType<KotlinCompile> {
     kotlinOptions.jvmTarget = "1.8"
 }
 
 application {
-    mainClass.set("MainKt")
+    mainClass.set("org.sdpi.ConvertAndVerifySupplementKt")
 }
